--- a/ejercicios_d_todito/practica/index.html
+++ b/ejercicios_d_todito/practica/index.html
@@ -7,6 +7,9 @@
     <title>enlazar_con_js</title>
 </head>
 <body>
-    <script src="../ejercicios_d_todito/ej_b.js"></script>
+    <script src="../ejercicios_d_todito/practica/ej_b.js"></script>
+    <div>
+        <h1>hola mundo</h1>
+    </div>
 </body>
 </html>
