--- a/ejercicios_d_todito/practica/index.html
+++ b/ejercicios_d_todito/practica/index.html
@@ -7,9 +7,17 @@
     <title>enlazar_con_js</title>
 </head>
 <body>
-    <script src="../ejercicios_d_todito/practica/ej_b.js"></script>
-    <div>
-        <h1>hola mundo</h1>
+    <script src="../practica/ej_b.js"></script>
+    <div class="constainer">
+        
+        <div class="header">
+            <h1>sistema de ventas</h1>
+        </div>
+
+        <div>
+
+        </div>
+
     </div>
 </body>
 </html>
