--- a/ejercicios_d_todito/practica/index.html
+++ b/ejercicios_d_todito/practica/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1 id="titulo" onmouseout="funcRoja(this) " onmouseover="funcionamarilla (this)">titulo</h1>    
+    <h1 id="titulo" onmousedown="funcRoja(this) " onmouseup="funcionamarilla (this)">titulo</h1>    
     <br>
     <p>text de rellleno Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus quia itaque a, facilis laudantium totam enim! Ab necessitatibus ipsum earum nostrum non, autem modi doloremque delectus nemo tempore dignissimos magnam.</p>
     
