--- a/javascript udemy 43/ejercices/calculadora/index.html
+++ b/javascript udemy 43/ejercices/calculadora/index.html
@@ -23,7 +23,7 @@
                 <label for="operandoB">Operando B</label>
                 <input type="number" class="form-control" placeholder="escribe operando B" id="operandoB">
             </div>
-        <button class="btn btn-primary mb-3" onclick="sumar()" >Sumar</button>
+        <button class="btn btn-primary mb-3" onclick=`sumar()`>Sumar</button>
             <div id="resultado">
                 
             </div>
