--- a/javascript udemy 43/ejercices/calculadora/index.html
+++ b/javascript udemy 43/ejercices/calculadora/index.html
@@ -12,10 +12,23 @@
 
 <body>
     <div class="container">
-        <h1>aplicacion calculadora</h1>
-    </div>
+        <h1 class="display-3s">aplicacion calculadora</h1>
     
-
+        <form id="forma">
+            <div class="mb-3">
+                <label for="operandoA">OperandoA</label>
+                <input type="number"  class="form-control" id="operandoA" placeholder="escribe operando A">
+            </div>
+            <div class="mb-3">
+                <label for="operandoB">Operando B</label>
+                <input type="number" class="form-control" placeholder="escribe operando B" id="operandoB">
+            </div>
+        <button class="btn btn-primary mb-3" onclick="sumar()" >Sumar</button>
+            <div id="resultado">
+                
+            </div>
+    </form>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
