--- a/javascript udemy 43/ejercices/listaPersonas/index.html
+++ b/javascript udemy 43/ejercices/listaPersonas/index.html
@@ -7,7 +7,7 @@
     <title>Listado de Personas</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
-<body onload="mostrarPersonas">
+<body onload="mostrarPersonas()">
     <div class="contenedor" id="cabecero">
         <h1>listado de personas</h1>
     </div>
