--- a/javascript udemy 43/ejercices/aplicacionPresupuesto/index.html
+++ b/javascript udemy 43/ejercices/aplicacionPresupuesto/index.html
@@ -7,6 +7,8 @@
     <title>Aplicación Presupuesto</title>
     <link href="css/estilos.css" rel='stylesheet'/>
     <link href="/website/css/uicons-bold-rounded.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/ae0fa710e6.js" crossorigin="anonymous"></script>
+
 </head>
 <body onload="cargarApp()">
     <div class="cabecero">
@@ -41,8 +43,10 @@
                     <div class="derecha limpiarEstilos">
                         <div class="elmento_valor">+ 220</div>
                         <div class="elemento_eliminar">
-                            <button class="elemento_eliminar--btn">
-                                <i class="fi-sr-eye"></i>
+                            <button class="elemento_eliminar--btn limpiarEstilos">
+                                <div>
+                                    <i class="fa-solid fa-anchor-lock ">-</i>
+                                </div>
                             </button>
                         </div>
                     </div>
@@ -56,6 +60,5 @@
     <script src='js/Ingreso.js'></script>
     <script src='js/Egreso.js'></script>
     <script src='js/app.js'></script>
-    <script src="https://kit.fontawesome.com/ae0fa710e6.js" crossorigin="anonymous"></script>
 </body>
 </html>
