no pude con el icono

--- a/javascript udemy 43/ejercices/aplicacionPresupuesto/index.html
+++ b/javascript udemy 43/ejercices/aplicacionPresupuesto/index.html
@@ -44,7 +44,7 @@
                             <button class="elemento_eliminar--btn">
                                     <ion-icon class="close-circle-outline"></ion-icon>
                                     <!-- <i class="fa-solid fa-acorn">X</i> -->
-                                    <font-awesome-icon icon="fa-solid fa-0" />
+                                    <!-- <font-awesome-icon icon="fa-solid fa-0" /> -->
                             </button>
                             
                         </div>
@@ -59,6 +59,6 @@
     <script src='js/Ingreso.js'></script>
     <script src='js/Egreso.js'></script>
     <script src='js/app.js'></script>
-    <script src="https://unpkg .com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
