--- a/javascript udemy 43/ejercices/aplicacionPresupuesto/index.html
+++ b/javascript udemy 43/ejercices/aplicacionPresupuesto/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aplicación Presupuesto</title>
     <link href="css/estilos.css" rel='stylesheet'/>
+    <link rel="shortcut icon" href="https://kit.fontawesome.com/ae0fa710e6.js" type="image/x-icon">
     <script src="https://kit.fontawesome.com/ae0fa710e6.js" crossorigin="anonymous"></script>
 </head>
 <body onload="cargarApp()">
