--- a/javascript udemy 43/ejercices/colorpicker/index.html
+++ b/javascript udemy 43/ejercices/colorpicker/index.html
@@ -16,5 +16,6 @@
     <div class="color-div">
         <input type="color" id="color">
     </div>
+    <script src="app/colr.js"></script>
 </body>
 </html>
