--- a/javascript udemy 43/index.html
+++ b/javascript udemy 43/index.html
@@ -1,48 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="pagina diseñada para dar inicos de aqui en adelante a el estudio y practica de javascript como bases para el desarrollo de software">
-    <title>desarrolo de software</title>
-    <link rel="shortcut icon" href="https://img.icons8.com/ios-filled/72/puzzle.png" type="image/x-icon">
+    <title>Ejemplo Formulario con JavaScript</title>
 </head>
+
 <body>
+    <form id='f
+    ormulario'>
+        Nombre: <input type="text" name='nombre' value='Juan' />
+        <br />
+        Apellido: <input type='text' name='apellido' value='Perez' />
+        <br />
+    </form>
+    <button onclick='mostrarValores()'>Mostrar</button>
+    <div id='valores'></div>
+    <script>
+        function mostrarValores() {
+            let formulario = document.forms['formulario'];
+            let texto = '';
+            let nombre = formulario['nombre'];
+            let apellido = formulario['apellido'];
+            texto = nombre.value + '<br/>' + apellido.value;
+            document.getElementById('valores').innerHTML = texto;
+        }
+    </script>
 
-    <div class="container">
-        <header class="header">
-            <h2>hola soy un header</h2>
+</body>
 
-
-            <div class="btn-logo">
-                <p>y aqui va un logo y tambien algo de texto</p>
-            </div>
-
-        <div class="fondo">
-            <p>y aqui va un backgroud</p>
-        </div>
-        </header>
-
-        <main class="main">
-            <div>
-                <ul>
-                    <li><a href="#">menu deslegable</a>
-                        <ol>
-                        <li><a href="#">menu hola 1</a></li>
-                        <li><a href="#">menu hola 2</a></li>
-                        <li><a href="#">menu hola 3</a></li>
-                        <li><a href="#">menu hola 4</a></li>
-                        </ol>
-                    </li>
-                </ul>
-            </div>
-
-            <div>
-                <p>hola soy un div de fondo</p>
-            </div>
-        </main>
-
-        
-    </body>
 </html>
