prueb para compañero

--- a/platzi_git/blogpost.html
+++ b/platzi_git/blogpost.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sourse of git</title>
     <link rel="stylesheet" href="css/estilos.css">
+    
 </head>
 <body>
     <h1>Manipulacion del Dom basica</h1>
@@ -13,6 +14,15 @@
 
     <p class="parrafo-class">este es un parrafo con clase</p>
 
+    <img src="./css/imagenes/gato.jpg" alt="">
+
+    <li>
+        <a href="https://www.bing.com/images/search?view=detailV2&ccid=saZmYF%2BD&id=9F009B14FCC74F24C0A86761786CC6CEDFF75E88&thid=OIP.saZmYF-DPuEFtaKBXwrx2AHaFj&mediaurl=https%3A%2F%2Fugc.kn3.net%2Fi%2Forigin%2Fhttp%3A%2F%2F2.bp.blogspot.com%2F_UL5CCqv-9as%2FSDFaWmaQwKI%2FAAAAAAAAACk%2FMmB0581cYtI%2FS1600-R%2Fgatos.jpg&cdnurl=https%3A%2F%2Fth.bing.com%2Fth%2Fid%2FR.b1a666605f833ee105b5a2815f0af1d8%3Frik%3DiF73387GbHhhZw%26pid%3DImgRaw%26r%3D0&exph=960&expw=1280&q=gatitos&simid=608052719699039178&form=IRPRST&ck=AECBA7B411CAF1957EF73F33A7C36DBD&selectedindex=4&ajaxhist=0&ajaxserp=0&vt=0&sim=11">hola mundo</a>
+    </li>
+    
+    <div class="gT">
+        <img src="https://www.bing.com/images/search?view=detailV2&ccid=saZmYF%2BD&id=9F009B14FCC74F24C0A86761786CC6CEDFF75E88&thid=OIP.saZmYF-DPuEFtaKBXwrx2AHaFj&mediaurl=https%3A%2F%2Fugc.kn3.net%2Fi%2Forigin%2Fhttp%3A%2F%2F2.bp.blogspot.com%2F_UL5CCqv-9as%2FSDFaWmaQwKI%2FAAAAAAAAACk%2FMmB0581cYtI%2FS1600-R%2Fgatos.jpg&cdnurl=https%3A%2F%2Fth.bing.com%2Fth%2Fid%2FR.b1a666605f833ee105b5a2815f0af1d8%3Frik%3DiF73387GbHhhZw%26pid%3DImgRaw%26r%3D0&exph=960&expw=1280&q=gatitos&simid=608052719699039178&form=IRPRST&ck=AECBA7B411CAF1957EF73F33A7C36DBD&selectedindex=4&ajaxhist=0&ajaxserp=0&vt=0&sim=11" alt="" width="100px" position="absolute">
+    </div>
     <p id="pid">este parra es con id</p>
 
     <input type="text" value="sierra117">
