--- a/full_stack_Developer_Platzy/Clase1/src/index2.html
+++ b/full_stack_Developer_Platzy/Clase1/src/index2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,25 +9,28 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Quicksand:wght@300;400;500;700&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
+
 <body>
     <div class="login">
         <div class="form-container">
             <img src="../../images/logo.jpg" alt="logo" class="logo">
-            <h1 class="title">Create new password</h1>
-            <p class="subtitle">Enter a new password</p>
+            <h1 class="title">Email has benn sent!</h1>
+            <p class="subtitle">Please check your inbox for instruccions on how reste the password</p>
 
-        <form action="" class="form">
-            <label for="password" class="label">Password</label>
-            <input type="password" name="password" id="password" placeholder="*********" class="input input-password">
-            <label for="new-password" class="label">Password</label>
-            <input type="password" name="password" id="new-password" placeholder="*********" class="input input-password">
+            <div class="email-image">
+                <img src="../../images/email.svg" alt="email">
+            </div>
 
-            <input type="submit" value="Confirm" class="primary-button login-buttom">
-        </form>
+            <button class="primary-button login-button">Login</button>
+
+            <p class="resend">
+                <span>Didn`t received the email?</span><a href="/">Resend</a>
+            </p>
         </div>
     </div>
 </body>
+
 </html>
